--- a/style.css
+++ b/style.css
@@ -1,32 +1,105 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-
-body{
-    background-color: #363633;
+.main {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgb(131, 58, 180);
+  background: linear-gradient(
+    90deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(253, 29, 29, 1) 50%,
+    rgba(252, 176, 69, 1) 100%
+  );
 }
-button{
-    width: 18px;
-    height: 18px;
+.box-relogio {
+  width: 40%;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.03);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(1.5px);
+  -webkit-backdrop-filter: blur(1.5px);
+  border: 1px solid rgba(255, 255, 255, 0.29);
 }
-.cabecalho{
-    display: flex;
-    justify-content: space-evenly;
-    background-color: #ffff00;
-    height: 100%;
+.box-relogio > p {
+  font-size: 100px;
+  color: #ffffff;
 }
-.logomarca>h2{
-    color: #363633;
+.hora {
+  width: 20%;
+  height: 35%;
+  color: #000000;
+  font-size: 48px;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #000000;
+  border-radius: 10px;
+  background-color: #ffffff;
 }
-#menu{
-    display:flex;
+.minuto {
+  width: 20%;
+  height: 35%;
+  color: #000000;
+  font-size: 48px;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #000000;
+  border-radius: 10px;
+  background-color: #ffffff;
 }
-#menu>li{
-    margin: 0 5%;
+.segundo {
+  width: 20%;
+  height: 35%;
+  color: #000000;
+  font-size: 48px;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  border: 2px solid #000000;
+  background-color: #ffffff;
 }
-#menu>li>a{
-    text-decoration: none;
-    color: #363633;
+.diaAtual {
+  color: #ffffff;
+  font-size: 38px;
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 800px) {
+  .box-relogio {
+    width: 60%;
+    height: 35%;
+  }
+  .hora {
+    width: 25%;
+    height: 25%;
+    font-size: 28px;
+  }
+  .minuto {
+    width: 25%;
+    height: 25%;
+    font-size: 28px;
+  }
+  .segundo {
+    width: 25%;
+    height: 25%;
+    font-size: 28px;
+  }
 }
