--- a/style.css
+++ b/style.css
@@ -21,8 +21,11 @@
   );
 }
 .box-relogio {
-  width: 40%;
-  height: 50%;
+  /*width: 40%;*/
+  height: 60%;
+  width: 700px;
+  /*height: 300px;*/
+  padding: 40px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -39,8 +42,10 @@
   color: #ffffff;
 }
 .hora {
-  width: 20%;
-  height: 35%;
+  /*width: 20%;
+  height: 35%;*/
+  width: 100px;
+  height: 100px;
   color: #000000;
   font-size: 48px;
   font-family: Arial, Helvetica, sans-serif;
@@ -52,8 +57,10 @@
   background-color: #ffffff;
 }
 .minuto {
-  width: 20%;
-  height: 35%;
+  /*width: 20%;
+  height: 35%;*/
+  width: 100px;
+  height: 100px;
   color: #000000;
   font-size: 48px;
   font-family: Arial, Helvetica, sans-serif;
@@ -65,8 +72,10 @@
   background-color: #ffffff;
 }
 .segundo {
-  width: 20%;
-  height: 35%;
+  /*width: 20%;
+  height: 35%;*/
+  width: 100px;
+  height: 100px;
   color: #000000;
   font-size: 48px;
   font-family: Arial, Helvetica, sans-serif;
@@ -82,7 +91,7 @@
   font-size: 38px;
   margin-bottom: 20px;
 }
-@media screen and (max-width: 800px) {
+/*@media screen and (max-width: 800px) {
   .box-relogio {
     width: 60%;
     height: 35%;
@@ -102,4 +111,4 @@
     height: 25%;
     font-size: 28px;
   }
-}
+}*/
